<resources>
    <string name="app_name">Effective Mobile Test Task</string>

    <string name="bottom_nav_avia_tickets">Aвиабилеты</string>
    <string name="bottom_nav_hotels">Отели</string>
    <string name="bottom_nav_in_short">Короче</string>
    <string name="bottom_nav_subscriptions">Подписки</string>
    <string name="bottom_nav_profile">Профиль</string>
    <string name="search_cheap_tickets">Поиск дешевых авиабилетов</string>
    <string name="back_to">обратно</string>
    <string name="from">от</string>
    <string name="ruble">₽</string>
    <string name="musically_fly_away">Музыкально отлететь</string>
    <string name="show_all_places">Показать все места</string>
    <string name="show_all">Показать все</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="subscribe_to_price">Подписка на цену</string>
    <string name="filters">Фильтры</string>
    <string name="transfers">Пересадки</string>
    <string name="without_transfers">Без пересадок</string>
    <string name="only_baggage">Только с багажом</string>
    <string name="ready">Готово</string>
    <string name="filters_button_name">фильтры</string>
    <string name="from_moscow_name">Откуда - Москва</string>
    <string name="to_turkey_name">Куда - Турция</string>
    <string name="econom_name">1, эконом</string>
    <string name="straight_routes_name">Прямые рейсы</string>
    <string name="difficult_route_name">Сложный\nмаршрут</string>
    <string name="hot_tickets_name">Горячие\nбилеты</string>
    <string name="holidays_name">Выходные</string>
    <string name="anywhere_name">Куда угодно</string>
    <string name="straigh_popular_name">Популярное направление</string>
    <string name="phucket_name">Пхукет</string>
    <string name="sochi_name">Сочи</string>
    <string name="stambul_name">Стамбул</string>
</resources>