<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/BasicScreenStyle"
    tools:context=".presentation.tickets.fragments.FilterTicketsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/bottom_sheet_background_color">

        <ImageView
            android:id="@+id/filterTicketsCloseIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/cross"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:layout_marginStart="8dp"
            android:layout_marginVertical="8dp"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfers"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/bottom_sheet_background_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/without_transfers"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            app:thumbTint="@color/switch_thumb_selector"
            app:trackTint="@color/switch_track_selector"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/bottom_sheet_background_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_baggage"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            app:thumbTint="@color/switch_thumb_selector"
            app:trackTint="@color/switch_track_selector"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/filterTicketsReadyButtonAppCompatButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/ready"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="16dp"
            android:background="@drawable/default_button_shape"
            android:backgroundTint="@color/green"/>

    </FrameLayout>

</LinearLayout>