<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicScreenStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.tickets.fragments.SearchTicketsFragment">

    <TextView
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/search_cheap_tickets"
        android:textAlignment="center"
        android:textColor="@color/base_text_color"
        android:textSize="22sp"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/external_card"
        app:cardCornerRadius="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/internal_card"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search"
                    android:backgroundTint="@color/layout_black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/internal_card"
                            android:textColor="@color/white"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/vertical_arrows"
                            android:layout_gravity="center_vertical|end"
                            android:contentDescription="@null"
                            android:visibility="visible"/>
                    </FrameLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:background="@color/internal_card"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/cross"
                            android:layout_gravity="center_vertical|end"
                            android:contentDescription="@null"
                            android:visibility="visible"/>
                    </FrameLayout>


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="13dp"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:backgroundTint="@color/external_card"
                app:cardCornerRadius="50dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/plus"
                        android:backgroundTint="@color/grey_7"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/back_to"
                        android:textSize="14sp"
                        android:textColor="@color/grey_7"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:backgroundTint="@color/external_card"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="50dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="11dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="1dp"
                        android:text="24 фев"
                        android:textSize="14sp"
                        android:textColor="@color/grey_7"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="1dp"
                        android:text=", сб"
                        android:textSize="14sp"
                        android:textColor="@color/grey_5"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/external_card"
                app:cardCornerRadius="50dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/profile_min"
                        android:backgroundTint="@color/grey_5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="1dp"
                        android:text="1, эконом"
                        android:textSize="14sp"
                        android:textColor="@color/grey_7"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/external_card"
                app:cardCornerRadius="50dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/settings"
                        android:backgroundTint="@color/grey_7"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/back_to"
                        android:textSize="14sp"
                        android:textColor="@color/grey_7"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musically_fly_away"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:visibility="gone"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"
        tools:itemCount="4"
        tools:listitem="@layout/item_view_musically_fly_away"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/default_button_shape"
        android:text="@string/show_all_places"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/grey_1"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Прямые рейсы"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                tools:itemCount="3"
                tools:listitem="@layout/item_view_flights" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_all"
                android:textColor="@color/blue"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/default_button_shape"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/show_all_tickets"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="23dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/background_color_switch_view"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/subscriptions"
                android:backgroundTint="@color/blue"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/subscribe_to_price"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_selector"
                app:trackTint="@color/switch_track_selector" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>


